Fix distorted images in announcements
Change max-height back to height to scale them properly.

--- a/src/scss/_index_sections.scss
+++ b/src/scss/_index_sections.scss
@@ -78,7 +78,7 @@
 
     img {
       max-width: 100%;
-      max-height: 100%;
+      height: 100%;
     }
 
     .meta {
